--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "final-project-node-server",
   "version": "1.0.0",
   "description": "node.js web server for final project",
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/yufeiz6/final-project-node-server#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0"
   }
 }
